# cloudvideo

./: .gitmodules  CMakeLists.txt  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  notes.md
src/cloudcontroller/: cloudcontroller.cpp  cloudcontroller.h  main.cpp
src/components/authbe/: auth_backend.cpp  auth_backend.h
src/components/http_handlers/: auth_handler.cpp  auth_handler.h  file_upload_handler.cpp  file_upload_handler.h  http_endpoint.cpp  http_endpoint.h  ihttphandler.h
src/components/kafka_helpers/: kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h
src/components/util/: atomic_queue.h
src/test/: main.cpp
src/worker/: main copy.cpp  main.cpp
